Change index.html, catalog.html
Внёс правки в вёрстку.

--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/logo.png" alt="Device" height="36" width="164">
-          <em class="visually-hidden">Device</em>
+          <img src="img/logo.png" alt="Device Logo" height="36" width="164">
         </a>
         <input type="search" placeholder="Поиск по сайту">
         <ul class="main-user-navigation">
@@ -118,8 +117,7 @@
     <footer class="main-footer">
       <nav class="footer-navigation">
         <a class="header-logo logo" href="index.html">
-          <img src="img/footer-logo.png" alt="Device" height="36" width="164">
-          <em class="visually-hidden">Device</em>
+          <img src="img/footer-logo.png" alt="Device Logo" height="36" width="164">
         </a>
         <ul class="main-footer__user-navigation">
           <li>
@@ -138,11 +136,25 @@
         </ul>
       </nav>
       <ul class="main-footer__social">
-        <li><a href="https://facebook.com" class="visually-hidden">Facebook</a></li>
-        <li><a href="https://instagram.com" class="visually-hidden">Instagram</a></li>
-        <li><a href="https://twitter.com" class="visually-hidden">Twitter</a></li>
+        <li>
+          <a href="https://facebook.com">
+            <span class="visually-hidden">Facebook</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://instagram.com">
+          <span class="visually-hidden">Instagram</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com">
+            <span class="visually-hidden">Twitter</span>
+          </a>
+        </li>
       </ul>
-      <a href="https://htmlacademy.ru" class="main-footer__copyrigth visually-hidden">HTML Academy</a>
+      <a href="https://htmlacademy.ru" class="main-footer__copyrigth">
+        <span class="visually-hidden">HTML Academy</span>
+      </a>
     </footer>
 
     <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
