Change index.html, catalog.html
- удалил ссылки на несуществующие страницы
- скрыл модальные окна

--- a/catalog.html
+++ b/catalog.html
@@ -13,27 +13,27 @@
         <input type="search" placeholder="Поиск по сайту">
         <ul class="main-user-navigation">
           <li>
-            <a href="user.html">Валентин Петухов</a>
-            <a href="exit.html">Выйти</a>
+            <a href="#">Валентин Петухов</a>
+            <a href="#">Выйти</a>
           </li>
-          <li><a href="comparison.html">Сравнить</a></li>
-          <li><a href="basket.html">Корзина</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
         </ul>
         <ul class="main-site-navigation">
           <li>
             <a class="main-submenu-toggle">Каталог товаров</a>
             <ul class="main-submenu">
-              <li><a href="catalog.html">Виртуальная реальность</a></li>
+              <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="catalog.html">Моноподы для селфи</a></li>
-              <li><a href="catalog.html"> Экшн-камеры</a></li>
-              <li><a href="catalog.html">Фитнес-браслеты</a></li>
-              <li><a href="catalog.html">Умные часы</a></li>
-              <li><a href="catalog.html">Квадрокоптеры</a></li>
+              <li><a href="#"> Экшн-камеры</a></li>
+              <li><a href="#">Фитнес-браслеты</a></li>
+              <li><a href="#">Умные часы</a></li>
+              <li><a href="#">Квадрокоптеры</a></li>
             </ul>
           </li>
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="garanty.html">Гарантия</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -42,7 +42,7 @@
       <h1>Моноподы для селфи</h1>
       <ul class="breadcrumb">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="catalogs.html">Каталог</a></li>
+        <li><a href="#">Каталог</a></li>
         <li><a class="active">Моноподы для селфи</a></li>
       </ul>
       <form class="filter" method="post" action="https://echo.htmlacademy.ru">
@@ -121,33 +121,33 @@
         </a>
         <ul class="main-footer__user-navigation">
           <li>
-            <a href="user.html">Валентин Петухов</a>
-            <a href="exit.html">Выйти</a>
+            <a href="#">Валентин Петухов</a>
+            <a href="#">Выйти</a>
           </li>
-          <li><a href="comparison.html">Сравнить</a></li>
-          <li><a href="basket.html">Корзина</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
         </ul>
         <ul class="footer-site-navigation">
           <li><a href="https://goo.gl/maps/woREYKRREx12" class="main-footer__address">г. Москва, ул. Строителей, 15</a></li>
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="garanty.html">Гарантия</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
           <li><a href="tel:+74954959595" class="main-footer__phone">Тел: +7(495)495-95-95</a></li>
         </ul>
       </nav>
       <ul class="main-footer__social">
         <li>
-          <a href="https://facebook.com">
+          <a href="#">
             <span class="visually-hidden">Facebook</span>
           </a>
         </li>
         <li>
-          <a href="https://instagram.com">
+          <a href="#">
             <span class="visually-hidden">Instagram</span>
           </a>
         </li>
         <li>
-          <a href="https://twitter.com">
+          <a href="#">
             <span class="visually-hidden">Twitter</span>
           </a>
         </li>
