--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <a class="header-logo logo">
           <img src="img/logo.svg" alt="Device Logo" height="36" width="164">
         </a>
-        <input type="search" placeholder="Поиск по сайту" class="site-search">
+        <form action="https://echo.htmlacademy.ru" class="site-search">
+          <input type="search" id="site-search" name="search" placeholder="Поиск по сайту">
+          <button type="submit">Найти</button>
+        </form>
+
         <ul class="main-user-navigation">
           <li><a href="#">Войти</a></li>
           <li><a href="#">Сравнить</a></li>
