--- a/catalog.html
+++ b/catalog.html
@@ -164,7 +164,7 @@
 
     <footer class="main-footer">
       <nav>
-        <a class="header-logo inner-logo" href="index.html">
+        <a class="footer-logo inner-logo" href="index.html">
           <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="164">
         </a>
         <ul class="footer-user-nav">
