--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <footer class="main-footer">
       <nav>
-        <a class="header-logo logo">
+        <a class="footer-logo logo">
           <img src="img/logo-footer.svg" alt="Device Logo" height="36" width="163">
         </a>
         <ul class="footer-user-nav">
